--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "vue-turbolinks": "^2.0.3"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^2.11.2"
+  },
+
+  "scripts": {
+    "start:dev": "webpack-dev-server"
   }
 }
