--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "resource": "^0.8.1",
     "vue": "^2.5.17",
     "vue-loader": "14.2.2",
     "vue-resource": "^1.5.1",
@@ -10,9 +11,8 @@
     "vue-turbolinks": "^2.0.3"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.2"
+    "webpack-dev-server": "^2.11.3"
   },
-
   "scripts": {
     "start:dev": "webpack-dev-server"
   }
