--- a/config/database.yml
+++ b/config/database.yml
@@ -3,14 +3,9 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#adapter: sqlite3
-
-rake assets:precompile
-
-
+#
 default: &default
-  adapter: postgresql
-
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
